python-webapp/deployment-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-canary
  labels:
    app: python-app
    track: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
      track: canary
  template:
    metadata:
      labels:
        app: python-app
        track: canary
    spec:
      containers:
        - name: python-app
          image: charansait372/python-aks-platform:v1.4
          command: ["python"]
          args: ["run.py"]
          ports:
            - name: http
              containerPort: 5000
