python-webapp/deployment-stable.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-stable
  labels:
    app: python-app
    track: stable
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-app
      track: stable
  template:
    metadata:
      labels:
        app: python-app
        track: stable
    spec:
      containers:
        - name: python-app
          image: charansait372/python-aks-platform:v1.4
          ports:
            - name: http
              containerPort: 5000
