python-webapp/service-canary.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app-canary
  labels:
    app: python-app
    component: application
spec:
  selector:
    app: python-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
